syntax = "proto3";
package rest;

option go_package = "github.com/blockscout/actix-prost/tests";

service RestRPC {
  rpc GetRPC(Get) returns (Get);
  rpc GetQueryRPC(Get) returns (Get);

  rpc PostRPC(Post) returns (Post);
  rpc PostQueryRPC(Post) returns (Post);
  rpc PostNoPathRPC(Post) returns (Post);

  rpc PostGetRPC(Post) returns (Get);
}

service SimpleRPC {
  rpc PostRPC(Post) returns (Post);
}

message Get {
  string foo = 1;
  int64 bar = 2;
}

message Post {
  string foo = 1;
  int64 bar = 2;
  double baz = 3;
}
